--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@tanstack/react-query": "^5.67.2",
         "@tanstack/react-query-devtools": "^5.67.3",
         "@types/mdx": "^2.0.13",
+        "@vercel/analytics": "^1.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
