FEAT: 이미지 최적화

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "next-themes": "^0.4.6",
         "notion-to-md": "^3.1.5",
         "postcss": "^8.5.2",
+        "probe-image-size": "^7.2.3",
         "react": "^19.0.0",
         "react-day-picker": "^9.10.0",
         "react-dom": "^19.0.0",
@@ -78,6 +79,7 @@
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.6",
+        "unist-util-visit": "^5.0.0",
         "vaul": "^1.1.2",
         "zod": "^3.24.2"
     },
@@ -86,6 +88,7 @@
         "@eslint/js": "^9.20.0",
         "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^20",
+        "@types/probe-image-size": "^7.2.5",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
